[gd_scene load_steps=6 format=2]

[ext_resource path="res://gfx/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://shader/ship_material.tres" type="Material" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 240, 171, 78, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.6667, 6.25 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 534
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = SubResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, -1 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioFx" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="on_shoot"]
[connection signal="timeout" from="InvulTimer" to="." method="on_invul_over"]
